<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/et_song_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/selector_edit_song_feedback"
        android:ellipsize="end"
        android:gravity="center"
        android:hint="@string/pls_input_song_name"
        android:maxLines="1"
        android:padding="5dp"
        android:textColor="@drawable/selector_song_feedback_text"
        android:textColorHint="@drawable/selector_song_feedback_hint"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/et_singer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@+id/et_song_name"
        android:layout_weight="1"
        android:background="@drawable/selector_edit_song_feedback"
        android:ellipsize="end"
        android:gravity="center"
        android:hint="@string/pls_input_singer_name"
        android:maxLines="1"
        android:padding="5dp"
        android:textColor="@drawable/selector_song_feedback_text"
        android:textColorHint="@drawable/selector_song_feedback_hint"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/et_bug"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@+id/et_singer"
        android:layout_weight="1"
        android:background="@drawable/selector_edit_song_feedback"
        android:ellipsize="end"
        android:gravity="center"
        android:hint="@string/pls_select_bug_type"
        android:maxLines="1"
        android:padding="5dp"
        android:textColor="@drawable/selector_song_feedback_text"
        android:textColorHint="@drawable/selector_song_feedback_hint"
        android:textSize="18sp" />
</LinearLayout>


