<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="160dp"
    android:paddingTop="100dp"
    android:paddingRight="40dp"
    android:paddingBottom="120dp">

    <LinearLayout
        android:id="@+id/ll_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bill_top"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/good"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_s"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_pre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/service_pre_page"
        android:visibility="gone" />

    <com.beidousat.karaoke.widget.viewpager.WidgetGiftCartPage
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_b"
        android:layout_below="@+id/ll_t"
        android:layout_toLeftOf="@+id/btn_next"
        android:layout_toRightOf="@+id/btn_pre"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/service_next_page"
        android:visibility="gone" />


    <RelativeLayout
        android:id="@+id/rl_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_bill_bottom"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_total1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:text="@string/total"
            android:textColor="@color/song_selected"
            android:textSize="26sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/tv_total1"
            android:textColor="@color/song_selected"
            android:textSize="32sp"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/tv_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/btn_pay"
            android:background="@drawable/selector_yellow_btn"
            android:minWidth="100dp"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:text="@string/delete"
            android:textColor="#8B4523"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="50dp"
            android:background="@drawable/selector_yellow_btn"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:text="@string/submit_order"
            android:textColor="#8B4523"
            android:textSize="20sp" />

    </RelativeLayout>
</RelativeLayout>