<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingTop="100dp"
    android:paddingLeft="160dp"
    android:paddingBottom="120dp"
    android:paddingRight="40dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#0dffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tv_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:textColor="#ccc"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/stage_name2"
                android:textColor="#ccc"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/job_num2"
                android:textColor="#ccc"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/clock_card_time"
                android:textColor="#ccc"
                android:textSize="18sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_persons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="always"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <com.bestarmedia.libwidget.image.RecyclerImageView
            android:id="@+id/riv_pr_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/service_pr_on" />

        <com.bestarmedia.libwidget.image.RecyclerImageView
            android:id="@+id/riv_pr_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/service_pr_off" />

        <com.bestarmedia.libwidget.image.RecyclerImageView
            android:id="@+id/riv_pr_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/service_pr_cancel" />
    </LinearLayout>

</LinearLayout>